Add frontmatter to export